# aish

./: .gitignore  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  Makefile  QUICKSTART.md  README.md  README_CN.md  README_DE.md  README_ES.md  README_FR.md  README_JA.md  aish.spec  build.sh  pyproject.toml  testrun.sum
.github/: PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE_CN.md
.github/ISSUE_TEMPLATE/: bug_report_cn.yml  config.yml  feature_request.yml  feature_request_cn.yml
.github/actions/release-metadata/: action.yml
.github/workflows/: ci.yml  live-smoke.yml  release-final-check.yml  release-preparation.yml  release.yml
crates/aish-cli/: Cargo.toml
crates/aish-cli/src/: main.rs  models_auth.rs  uninstall.rs  update.rs
crates/aish-config/: Cargo.toml
crates/aish-config/src/: lib.rs  loader.rs  model.rs
crates/aish-context/: Cargo.toml
crates/aish-context/src/: lib.rs  manager.rs  types.rs
crates/aish-core/: Cargo.toml
crates/aish-core/src/: error.rs  lib.rs  plan.rs  types.rs
crates/aish-core/tests/: plan_integration_test.rs
crates/aish-i18n/: Cargo.toml
crates/aish-i18n/locales/: de-DE.yaml  en-US.yaml  es-ES.yaml  fr-FR.yaml  ja-JP.yaml  zh-CN.yaml
crates/aish-i18n/src/: lib.rs  manager.rs
crates/aish-llm/: Cargo.toml
crates/aish-llm/src/: agent.rs  client.rs  diagnose_agent.rs  langfuse.rs  lib.rs  models.rs  oauth.rs  provider.rs  session.rs  streaming.rs  subsession.rs  types.rs  usage.rs
crates/aish-llm/src/providers/: codex.rs  mod.rs  openai_compat.rs  registry.rs  types.rs
crates/aish-llm/tests/: llm_integration_test.rs
crates/aish-memory/: Cargo.toml
crates/aish-memory/src/: lib.rs  manager.rs  models.rs
crates/aish-prompts/: Cargo.toml
crates/aish-prompts/src/: lib.rs  manager.rs  template.rs
crates/aish-pty/: Cargo.toml
crates/aish-pty/src/: bash_rc_wrapper.sh  command_state.rs  control.rs  executor.rs  lib.rs  offload.rs  persistent.rs  state_capture.rs  types.rs
crates/aish-scripts/: Cargo.toml
crates/aish-scripts/src/: executor.rs  hooks.rs  lib.rs  loader.rs  models.rs  registry.rs
crates/aish-security/: Cargo.toml
crates/aish-security/src/: fallback.rs  lib.rs  manager.rs  overlay.rs  policy.rs  sandbox.rs  sandbox_daemon.rs  sandbox_ipc.rs  sandbox_worker.rs  strip_sudo.rs  types.rs
crates/aish-security/tests/: security_integration_test.rs
crates/aish-session/: Cargo.toml
crates/aish-session/src/: lib.rs  models.rs  store.rs
crates/aish-shell/: Cargo.toml
crates/aish-shell/prompts/: cmd_error.md  error_detect.md  guess_command.md  oracle.md  role.md  skill.md  system_diagnose.md
crates/aish-shell/src/: ai_handler.rs  animation.rs  app.rs  autosuggest.rs  commands.rs  environment.rs  input.rs  lib.rs  prompt.rs  readline.rs  renderer.rs  token_store.rs  tui.rs  types.rs
crates/aish-shell/src/wizard/: endpoints.rs  free_key.rs  mod.rs  model_fetch.rs  plan_approval.rs  plan_display.rs  verification.rs
crates/aish-shell/tests/: shell_integration_test.rs
crates/aish-skills/: Cargo.toml
crates/aish-skills/src/: hotreload.rs  lib.rs  manager.rs  models.rs  validator.rs
crates/aish-tools/: Cargo.toml
crates/aish-tools/src/: ask_user.rs  bash.rs  final_answer.rs  fs.rs  glob_tool.rs  grep_tool.rs  lib.rs  memory_tool.rs  plan_tool.rs  python.rs  registry.rs  secure_bash.rs  skill_tool.rs  system_diagnose.rs
docs/: 2026-03-25-pty-ai-integration-design.md  ctrl-c-fix-final-summary.md  ctrl-c-fix-summary.md  rust-i18n-analysis.md  rust-rewrite-progress.md  skills-guide.md
docs/de/: ROADMAP.md
docs/en/: ROADMAP.md
docs/es/: ROADMAP.md
docs/fr/: ROADMAP.md
docs/ja/: ROADMAP.md
docs/superpowers/plans/: 2026-03-27-shell-pty-ctrl-c-migration.md
docs/superpowers/specs/: 2026-03-27-shell-pty-ctrl-c-migration-design.md  2026-03-30-shell-context-fixes-design.md  2026-03-30-shell-pty-missing-features-design.md
docs/zh/: ROADMAP_CN.md
packaging/: build_bundle.sh  prefetch_tiktoken_cache.py
packaging/scripts/: publish_release.sh  release_metadata.py  setup-ci-env.sh  smoke-installed-aish.sh  update_release_files.py
src/aish/: __init__.py  cli.py  config.py  llm.py  prompts.py  sandboxd.py  shell.py  system_info.py  uninstall_manager.py  update_manager.py
src/aish/cli/: __init__.py  __main__.py  uninstall_manager.py  update_manager.py
src/aish/i18n/: de-DE.yaml  en-US.yaml  es-ES.yaml  fr-FR.yaml  ja-JP.yaml  zh-CN.yaml
src/aish/interaction/: __init__.py  ask_user.py  models.py  service.py
src/aish/llm/: __init__.py  agents.py  session.py
src/aish/memory/: config.py  manager.py
tests/: conftest.py  test_ask_user_tool.py  test_cli.py  test_config_xdg_data_paths.py  test_exit_tracker_repeat_error.py  test_interaction_ask_user.py  test_litellm_langfuse.py  test_llm_events.py  test_memory_manager.py  test_memory_tool.py  test_plan_mode.py  test_provider_registry.py  test_shell.py  test_shell_extended.py  test_shell_llm_event_router.py  test_shell_prompt_io.py  test_uninstall_manager.py  test_update_manager.py
tests/cli/: __init__.py  test_cli.py
tests/config/: __init__.py
tests/dejagnu/: test_uninstall_command.sh  test_update_command.sh
tests/i18n/: __init__.py  test_i18n_help.py
tests/llm/: __init__.py  test_litellm_langfuse.py  test_litellm_loader.py  test_llm_events.py
tests/memory/: __init__.py  test_memory_config.py
tests/offload/: __init__.py  test_pty_output_offload.py
tests/plans/: test_build_agent_tui.py  test_manager.py  test_models.py  test_plan_agent.py
tests/scripts/: __init__.py  test_enable_scripts.py  test_init_scripts_dir.py  test_scripts.py
tests/security/: test_strip_sudo_prefix.py
tests/skills/: __init__.py  test_skill_hot_reload.py
tests/state/: test_context_manager.py  test_history_manager.py
tests/tools/: __init__.py  test_ask_user_tool.py  test_bash_executor.py  test_bash_output_offload.py  test_final_answer.py  test_fs_tools.py
tests/tui/: test_adapters.py  test_app.py  test_app_selection.py  test_widgets.py
tests/utils/: test_env_var_expansion.py  test_tilde_expansion.py
tests/wizard/: __init__.py
(+103 files in other folders)
