[workspace]
resolver = "2"
members = [
    "crates/aish-core",
    "crates/aish-config",
    "crates/aish-i18n",
    "crates/aish-pty",
    "crates/aish-llm",
    "crates/aish-session",
    "crates/aish-context",
    "crates/aish-security",
    "crates/aish-skills",
    "crates/aish-memory",
    "crates/aish-tools",
    "crates/aish-scripts",
    "crates/aish-shell",
    "crates/aish-cli",
    "crates/aish-prompts",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
rust-version = "1.80"

[workspace.dependencies]
# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "blocking"], default-features = false }

# CLI
clap = { version = "4", features = ["derive"] }

# Terminal
crossterm = "0.28"
ratatui = "0.30"

# System
nix = { version = "0.29", features = ["term", "process", "signal", "fs", "ioctl", "poll"] }
libc = "0.2"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# File watching
notify = "7"

# Token counting
tiktoken-rs = "0.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Regex
regex = "1"

# Crypto
sha2 = "0.10"
base64 = "0.22"

# Random
rand = "0.9"

# Readline
rustyline = { version = "18", features = ["derive"] }

# UUID
uuid = { version = "1", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Markdown
richrs = { version = "0.2", features = ["syntax", "markdown"] }

# System info
sysinfo = "0.33"

# YAML config
dirs = "5"

# Testing
tempfile = "3"

# Internal crates
aish-core = { path = "crates/aish-core" }
aish-config = { path = "crates/aish-config" }
aish-i18n = { path = "crates/aish-i18n" }
aish-pty = { path = "crates/aish-pty" }
aish-llm = { path = "crates/aish-llm" }
aish-session = { path = "crates/aish-session" }
aish-context = { path = "crates/aish-context" }
aish-security = { path = "crates/aish-security" }
aish-skills = { path = "crates/aish-skills" }
aish-memory = { path = "crates/aish-memory" }
aish-tools = { path = "crates/aish-tools" }
aish-shell = { path = "crates/aish-shell" }
aish-scripts = { path = "crates/aish-scripts" }
aish-prompts = { path = "crates/aish-prompts" }
