[package]
name = "aish-llm"
version.workspace = true
edition.workspace = true

[dependencies]
aish-core.workspace = true
aish-context.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
futures.workspace = true
sha2.workspace = true
base64.workspace = true
rand.workspace = true
litellm-rs = { version = "0.4", default-features = false, features = ["lite"] }

[dev-dependencies]
tempfile.workspace = true
