[package]
name = "aish-security"
version.workspace = true
edition.workspace = true

[dependencies]
aish-core.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
tracing.workspace = true
regex.workspace = true
dirs.workspace = true
uuid.workspace = true
tokio = { workspace = true, features = ["net", "time", "io-util"] }
libc.workspace = true
