[package]
name = "aish-tools"
version.workspace = true
edition.workspace = true

[dependencies]
aish-core.workspace = true
aish-i18n.workspace = true
aish-llm.workspace = true
aish-pty.workspace = true
aish-security.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
regex.workspace = true
uuid.workspace = true
glob = "0.3"
shellexpand = "2.1"
inquire = "0.9.4"

[dev-dependencies]
tempfile = "3"
